<resources>
    <string name="app_name">PetSitter</string>
    <string name="title_animals">Animals</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_animal">Animal</string>

    <string name="error">Error</string>

    <string name="mixed">Mixed</string>
    <string name="unknown">Unknown</string>

    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="personal_information">Personal information</string>
    <string name="save">Save</string>
</resources>
